[tool.poetry]
name = "desy-bluesky"
version = "0.2.2"
description = ""
authors = ["Devin Burke"]
license = "GNU GPL 3"
packages = [
    { include = "desy_bluesky"}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "*"
bluesky = "*"
databroker = "*"
matplotlib = "*"
nxarray = "*"
ipython = "*"
pytest = "*"
PyYAML = "*"
pyepics = "*"
pytango = "*"
aioca = "*"
ophyd = "*"
ophyd-async = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
poetry = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
